# ASR_Dubber

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pipeline_paths.py  pipeline_utils.py  run_pipeline.py
nemo/: canary_patch.py  nemo.py  nemo_audio.py  nemo_diarization_report.py  nemo_diarize.py  nemo_modal_app.py  nemo_model.py  pyproject.toml  qwen3_asr.py
qwen3-tts/: dub.py  dub_audio.py  dub_srt.py  dubber_modal.py  pyproject.toml  qwen_tts_worker.py
translate-gemma/: clean_subs.py  pyproject.toml  translate.py  translate_diarize.py  translate_utils.py
whisper/: detect_language.py  pyproject.toml  whisper_local.py  whisper_modal_asr.py
