[project]
name = "whisper"
version = "0.1.0"
description = "Whisper transcription project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.1.0",
    "openai-whisper",
    "librosa>=0.10",
    "soundfile>=0.12",
    "demucs==4.0.0",
    "numpy<2.0",
    "modal",
    "einops",
    "julius",
    "diffq",
    "sympy"
]

[tool.uv]
index-url = "https://pypi.org/simple"
# Removed the 's' at the end of urls
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
